<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="deeplink_about">pt://about</string>
    <string name="about">About</string>
    <string name="pt_player_github_repository">PT-PLAYER GITHUB REPOSITORY</string>
    <string name="pt_player">PT_PLAYER</string>
    <string name="about_version">0.0.1</string>
    <string name="about_description">Thanks for trying out PT-Player! The project is still in alpha phase and missing features as expected. If you find any bugs or you have any suggestions, feel free to check out the repository on GitHub and file an issue.
It helps making PT-Player better. Thank you.</string>
</resources>