<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/aboutToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/aboutBackIc"
            tools:ignore="RtlHardcoded"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aboutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotoslab_black"
            android:maxLines="1"
            android:text="@string/about"
            android:textColor="@color/colorPrimaryLightText"
            android:layout_marginLeft="8dp"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/aboutBackIc"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded,SpUsage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--######################################################-->


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:id="@+id/aboutLogoIV"
        android:layout_marginTop="56dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutToolbar" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/aboutAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoslab_black"
        android:textSize="16dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:text="@string/pt_player"
        android:textColor="@color/colorPrimaryLightText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutLogoIV"
        tools:ignore="SpUsage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/aboutVersionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoslab_black"
        android:textSize="14dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:text="@string/about_version"
        android:textColor="@color/colorPrimaryLightText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppName"
        tools:ignore="SpUsage" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/aboutDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoslab_medium"
        android:textSize="14dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:background="@drawable/shape_stroke_text_rectangel"
        android:gravity="left"
        android:text="@string/about_description"
        android:textColor="@color/colorPrimaryLightText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutVersionName"
        tools:ignore="SpUsage" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/aboutRepoBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_primary_button"
        android:fontFamily="@font/robotoslab_medium"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:maxLines="1"
        android:layout_marginTop="24dp"
        android:text="@string/pt_player_github_repository"
        android:textColor="@color/colorPrimaryLightText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>